--- a/Experiencia.html
+++ b/Experiencia.html
@@ -46,7 +46,7 @@
                             <a class="nav-link" href="Experiencia.html">Experiencia</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="skills.html">skills</a>
+                            <a class="nav-link" href="skills.html">Skills</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contacto.html">Contacto</a>
