--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
             <h1 class="titulo-pie">Desarrollado por Edgar Espinola</h1>
             <div class="correo-icons">         
                 <div><a class="icons" href=""><img src="imagenes/github2.png" alt=""></a></div>
+                <div><a class="icons" href=""><img src="imagenes/whatsapp.png" alt=""></a></div>
+                <div><a class="icons" href=""><img src="imagenes/linkedin.png" alt=""></a></div>
                 <div><a class="icons" href=""><img src="imagenes/mail.png" alt=""></a></div>
-                <div><a class="icons" href=""><img src="imagenes/whatsapp.png" alt=""></div>
-                <div><a class="icons" href=""><img src="imagenes/linkedin.png" alt=""></div>
+                
                 
             </div>
         </div>
-
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
