--- a/skills.html
+++ b/skills.html
@@ -78,15 +78,16 @@
         <div>
             <h1 class="titulo-pie">Desarrollado por Edgar Espinola</h1>
             <div class="correo-icons">         
-                <div><a class="icons" href=""><img src="imagenes/github2.png" alt=""></a></div>
-                <div><a class="icons" href=""><img src="imagenes/mail.png" alt=""></a></div>
-                <div><a class="icons" href=""><img src="imagenes/whatsapp.png" alt=""></div>
-                <div><a class="icons" href=""><img src="imagenes/linkedin.png" alt=""></div>
+                <div><a class="icons" href="https://github.com/edgar-1993" target="blank"><img src="imagenes/github2.png" alt=""></a></div>
+                <div><a class="icons" href="https://wa.me/541134470765?text=Hola! he visto tu Portfolio!" target="blank"><img src="imagenes/whatsapp.png" alt=""></a></div>
+                <div><a class="icons" href="https://www.linkedin.com/in/edgar-espinola/" target="blank"><img src="imagenes/linkedin.png" alt=""></a></div>
+                <div><a class="icons" href="mailto:edgar.espinoladavid@gmail.com"><img src="imagenes/mail.png" alt=""></a></div>
+                
                 
             </div>
         </div>
-
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
