se agrega links de redes sociales

--- a/index.html
+++ b/index.html
@@ -104,13 +104,15 @@
     <footer class="container-fluid">
         <div>
             <h1 class="titulo-pie">Desarrollado por Edgar Espinola</h1>
-            <div class="correo-icons">         
-                <div><a class="icons" href=""><img src="imagenes/github2.png" alt=""></a></div>
-                <div><a class="icons" href=""><img src="imagenes/whatsapp.png" alt=""></a></div>
-                <div><a class="icons" href=""><img src="imagenes/linkedin.png" alt=""></a></div>
-                <div><a class="icons" href=""><img src="imagenes/mail.png" alt=""></a></div>
-                
-                
+            <div class="correo-icons">
+                <div><a class="icons" href="https://github.com/edgar-1993" target="blank"><img
+                            src="imagenes/github2.png" alt=""></a></div>
+                <div><a class="icons" href="https://wa.me/541134470765?text=Hola! he visto tu Portfolio!"
+                        target="blank"><img src="imagenes/whatsapp.png" alt=""></a></div>
+                <div><a class="icons" href="https://www.linkedin.com/in/edgar-espinola/" target="blank"><img
+                            src="imagenes/linkedin.png" alt=""></a></div>
+                <div><a class="icons" href="mailto:edgar.espinoladavid@gmail.com"><img src="imagenes/mail.png"
+                            alt=""></a></div>
             </div>
         </div>
     </footer>
