--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -33,7 +33,7 @@
     <header class="encabezado">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html"><img class="Logo" src="imagenes/Edgar.gif" alt=""></a>
+                <a class="navbar-brand" href="index.html"><img class="Logo" src="../imagenes/Edgar.gif" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
