se corrige rutas de acceso

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Experiencia.html">Experiencia</a>
+                            <a class="nav-link" href="pages/Experiencia.html">Experiencia</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="skills.html">Skills</a>
+                            <a class="nav-link" href="pages/skills.html">Skills</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contacto.html">Contacto</a>
+                            <a class="nav-link" href="pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -75,7 +75,7 @@
                     adipisci, atque iure provident corrupti vel fugasdasdiat architecto.</p>
             </div>
             <div>
-                <div class="boton-ver"><a class="bttn-float bttn-md bttn-defaul" href="Experiencia.html">Ver
+                <div class="boton-ver"><a class="bttn-float bttn-md bttn-defaul" href="pages/Experiencia.html">Ver
                         Experiencia</a>
                 </div>
             </div>
